@@ -70,41 +70,44 @@ class EditLdsOrd(EditSecondary):
     """
 
     _data_map = {
-        RelLib.LdsOrd.BAPTISM : [(_("<No Status>"), RelLib.LdsOrd.STATUS_NONE),
-                                 (_("Child"), RelLib.LdsOrd.STATUS_CHILD),
-                                 (_("Cleared"), RelLib.LdsOrd.STATUS_CLEARED),
-                                 (_("Completed"), RelLib.LdsOrd.STATUS_COMPLETED),
-                                 (_("Infant"), RelLib.LdsOrd.STATUS_INFANT),
-                                 (_("Pre-1970"), RelLib.LdsOrd.STATUS_PRE_1970),
-                                 (_("Qualified"), RelLib.LdsOrd.STATUS_QUALIFIED),
-                                 (_("Stillborn"), RelLib.LdsOrd.STATUS_STILLBORN),
-                                 (_("Submitted"), RelLib.LdsOrd.STATUS_SUBMITTED),
-                                 (_("Uncleared"), RelLib.LdsOrd.STATUS_UNCLEARED),
-                                 ],
-        RelLib.LdsOrd.ENDOWMENT: [(_("<No Status>"), RelLib.LdsOrd.STATUS_NONE),
-                                  (_("Child"), RelLib.LdsOrd.STATUS_CHILD),
-                                  (_("Cleared"), RelLib.LdsOrd.STATUS_CLEARED),
-                                  (_("Completed"), RelLib.LdsOrd.STATUS_COMPLETED),
-                                  (_("Infant"), RelLib.LdsOrd.STATUS_INFANT),
-                                  (_("Pre-1970"), RelLib.LdsOrd.STATUS_PRE_1970),
-                                  (_("Qualified"), RelLib.LdsOrd.STATUS_QUALIFIED),
-                                  (_("Stillborn"), RelLib.LdsOrd.STATUS_STILLBORN),
-                                  (_("Submitted"), RelLib.LdsOrd.STATUS_SUBMITTED),
-                                  (_("Uncleared"), RelLib.LdsOrd.STATUS_UNCLEARED),
-                                  ],
-        RelLib.LdsOrd.SEAL_TO_PARENTS:[(_("<No Status>"), RelLib.LdsOrd.STATUS_NONE),
-                                       (_("BIC"), RelLib.LdsOrd.STATUS_BIC),
-                                       (_("Cleared"), RelLib.LdsOrd.STATUS_CLEARED),
-                                       (_("Completed"), RelLib.LdsOrd.STATUS_COMPLETED),
-                                       (_("DNS"), RelLib.LdsOrd.STATUS_DNS),
-                                       (_("Pre-1970"), RelLib.LdsOrd.STATUS_PRE_1970),
-                                       (_("Qualified"), RelLib.LdsOrd.STATUS_QUALIFIED),
-                                       (_("Stillborn"), RelLib.LdsOrd.STATUS_STILLBORN),
-                                       (_("Submitted"), RelLib.LdsOrd.STATUS_SUBMITTED),
-                                       (_("Uncleared"), RelLib.LdsOrd.STATUS_UNCLEARED),
-                                       ],
+        RelLib.LdsOrd.BAPTISM : [
+            (_("<No Status>"), RelLib.LdsOrd.STATUS_NONE),
+            (_("Child"), RelLib.LdsOrd.STATUS_CHILD),
+            (_("Cleared"), RelLib.LdsOrd.STATUS_CLEARED),
+            (_("Completed"), RelLib.LdsOrd.STATUS_COMPLETED),
+            (_("Infant"), RelLib.LdsOrd.STATUS_INFANT),
+            (_("Pre-1970"), RelLib.LdsOrd.STATUS_PRE_1970),
+            (_("Qualified"), RelLib.LdsOrd.STATUS_QUALIFIED),
+            (_("Stillborn"), RelLib.LdsOrd.STATUS_STILLBORN),
+            (_("Submitted"), RelLib.LdsOrd.STATUS_SUBMITTED),
+            (_("Uncleared"), RelLib.LdsOrd.STATUS_UNCLEARED),
+            ],
+        RelLib.LdsOrd.ENDOWMENT: [
+            (_("<No Status>"), RelLib.LdsOrd.STATUS_NONE),
+            (_("Child"), RelLib.LdsOrd.STATUS_CHILD),
+            (_("Cleared"), RelLib.LdsOrd.STATUS_CLEARED),
+            (_("Completed"), RelLib.LdsOrd.STATUS_COMPLETED),
+            (_("Infant"), RelLib.LdsOrd.STATUS_INFANT),
+            (_("Pre-1970"), RelLib.LdsOrd.STATUS_PRE_1970),
+            (_("Qualified"), RelLib.LdsOrd.STATUS_QUALIFIED),
+            (_("Stillborn"), RelLib.LdsOrd.STATUS_STILLBORN),
+            (_("Submitted"), RelLib.LdsOrd.STATUS_SUBMITTED),
+            (_("Uncleared"), RelLib.LdsOrd.STATUS_UNCLEARED),
+            ],
+        RelLib.LdsOrd.SEAL_TO_PARENTS:[
+            (_("<No Status>"), RelLib.LdsOrd.STATUS_NONE),
+            (_("BIC"), RelLib.LdsOrd.STATUS_BIC),
+            (_("Cleared"), RelLib.LdsOrd.STATUS_CLEARED),
+            (_("Completed"), RelLib.LdsOrd.STATUS_COMPLETED),
+            (_("DNS"), RelLib.LdsOrd.STATUS_DNS),
+            (_("Pre-1970"), RelLib.LdsOrd.STATUS_PRE_1970),
+            (_("Qualified"), RelLib.LdsOrd.STATUS_QUALIFIED),
+            (_("Stillborn"), RelLib.LdsOrd.STATUS_STILLBORN),
+            (_("Submitted"), RelLib.LdsOrd.STATUS_SUBMITTED),
+            (_("Uncleared"), RelLib.LdsOrd.STATUS_UNCLEARED),
+            ],
         }
-    
+
     def __init__(self, state, uistate, track, attrib, callback):
         """
         Displays the dialog box.
